--- a/templates/modals.ejs
+++ b/templates/modals.ejs
@@ -90,7 +90,8 @@
 
             <textarea id="mathjaxSrc" rows="10" cols="60" placeholder="Write Mathjax here"></textarea>
             <div>
-                <input type="button" class="btn btn-primary mathjaxButton" id="doMathjax" value="Insert ">
+                <input type="button" class="btn btn-primary mathjaxButton" id="doMathjax" value="Insert Black font ">
+                <input type="button" class="btn btn-primary mathjaxButton" id="doRawMathjax" value="Insert Latex ">
                 <input type="button" class="btn btn-default mathjaxButton" id="cancelMathjax" value="Cancel">
             </div>
 
