--- a/templates/editbarButtons.ejs
+++ b/templates/editbarButtons.ejs
@@ -1,5 +1,17 @@
 <li data-type="button" data-key="mathjax">
-  <a class="grouped-middle ep_mathjax" data-l10n-id="ep_mathjax" title="Embed Mathjax " aria-label="Embed Mathjax">
-    <button class="buttonicon buttonicon-embed-mathjax ep_mathjax" data-l10n-id="ep_mathjax_" title="mathjax " aria-label="Embed mathjax">π</button>
+  <a
+    class="grouped-middle ep_mathjax"
+    data-l10n-id="ep_mathjax"
+    title="Embed Mathjax "
+    aria-label="Embed Mathjax"
+  >
+    <button
+      class="buttonicon buttonicon-emb-mathjax ep_mathjax"
+      data-l10n-id="ep_mathjax_"
+      title="mathjax "
+      aria-label="Embed mathjax"
+    >
+      σ
+    </button>
   </a>
 </li>
